<resources>
    <string name="app_name">Portfolio App</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_main_text">My Nanodegree Apps!</string>
    <string name="button_streamer_text">SPOTIFY STEAMER</string>
    <string name="button_scores_text">SCORES APP</string>
    <string name="button_library_text">LIBRARY APP</string>
    <string name="button_bigger_text">BUILD IT BIGGER</string>
    <string name="button_reader_text">XYZ READER</string>
    <string name="button_capstone_text">CAPSTONE: MY OWN APP</string>
</resources>
