<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gamisweb.portfolioapp.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fragment_main_text"
        android:id="@+id/fragment_main_text"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        />

    <Button
        style="@style/main_button"
        android:text="@string/button_streamer_text"
        android:id="@+id/button_streamer"
        />

    <Button
        style="@style/main_button"
        android:text="@string/button_scores_text"
        android:id="@+id/button_scores"
        />

    <Button
        style="@style/main_button"
        android:text="@string/button_library_text"
        android:id="@+id/button_library"
    />

    <Button
        style="@style/main_button"
        android:text="@string/button_bigger_text"
        android:id="@+id/button_bigger"
    />

    <Button
        style="@style/main_button"
        android:text="@string/button_reader_text"
        android:id="@+id/button_reader"
    />

    <Button
        style="@style/main_button"
        android:text="@string/button_capstone_text"
        android:id="@+id/button_capstone"
        android:background="#16ffff"
        />
</LinearLayout>
